--- a/index.html
+++ b/index.html
@@ -142,11 +142,7 @@
         <h1>To-Do List</h1>
         <div class="marquee-container">
             <div class="marquee">
-                Selamat datang di www.gmp-electric.com GMP Electric - LTC Glodok Jl. Hayam Wuruk Lindeteves Trade Centre Lantai. 2 Block A2 No.21 Glodok - Taman Sari - Jakarta Barat - Indonesia TEL : 6221-2268 6369 WA : 62811 9278 229
-           Jababeka Elektrik / GMP Electric - Jababeka
-Jl. Raya Industri Jababeka Ruko Harco Teknik Blok G No.7-8 Kawasan Industri Jababeka Tahap 1Cikarang - Jawa Barat - Indonesia 17530 Tel : 6221-8984 1952 / 8984-5628 WA : 62811 1918 229  /  813 4756 0211 E-mail : sales@gmp-electric.com GMP Electric - Lippo Cikarang
-Jl. Sriwijaya, Ruko Olympic Blok A.8 Lippo, Cibatu, Cikarang Selatan, Kabupaten Bekasi, Jawa Barat, 17550 TEL : 6221- 8990-2006 WA : 62877-7909 0747  /  812 3741 7949 EMAIL : sales@gmp-electric.com GMP Electric - Delta Mas Cikarang
-Ruko El Premio No. 3 Deltamas Boulevard- Kota Deltamas, Jl. Tol Jakarta Cikampek km. 37 Desa Sukamahi Kec. Cikarang Pusat, Bekasi. 17330 TEL : 6221 8911 8884 WA  : 62877 9001 8222 EMAIL : sales@gmp-electric.com</div>
+                Selamat datang di www.gmp-electric.com </div>
         </div>
         <div class="input-container">
             <input type="text" id="taskName" placeholder="Enter Task Name...">
