--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,35 +25,11 @@
             width: 400px;
             max-height: 90vh;
             overflow-y: auto;
-            position: relative;
         }
 
         h1 {
             text-align: center;
             color: #333;
-            margin-bottom: 10px;
-        }
-
-        .marquee-container {
-            width: 100%;
-            overflow: hidden;
-            position: relative;
-            margin-bottom: 20px;
-        }
-
-        .marquee {
-            display: inline-block;
-            white-space: nowrap;
-            padding-left: 100%;
-            animation: marquee 10s linear infinite;
-            color: #333;
-            font-size: 14px;
-            text-align: center;
-        }
-
-        @keyframes marquee {
-            0% { transform: translateX(100%); }
-            100% { transform: translateX(-100%); }
         }
 
         .input-container,
@@ -108,7 +85,7 @@
 
         .task-buttons {
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             position: absolute;
             top: 10px;
             right: 10px;
@@ -121,7 +98,6 @@
             padding: 5px 10px;
             border-radius: 5px;
             cursor: pointer;
-            margin-left: 5px;
         }
 
         .task-buttons button:hover {
@@ -135,15 +111,18 @@
         .task-buttons .edit-btn:hover {
             background-color: #45a049;
         }
+
+        .time-display {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 18px;
+            color: #333;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>To-Do List</h1>
-        <div class="marquee-container">
-            <div class="marquee">
-                Selamat datang di www.gmp-electric.com </div>
-        </div>
         <div class="input-container">
             <input type="text" id="taskName" placeholder="Enter Task Name...">
             <input type="text" id="description" placeholder="Enter Description...">
@@ -162,11 +141,12 @@
         </div>
 
         <div id="taskList"></div>
+
+        <!-- Display time here -->
+        <div class="time-display" id="timeDisplay"></div>
     </div>
 
     <script>
-        let editIndex = null;
-
         function addTask() {
             const taskName = document.getElementById('taskName').value;
             const description = document.getElementById('description').value;
@@ -221,12 +201,7 @@
 
             taskDiv.appendChild(buttonsDiv);
 
-            if (editIndex !== null) {
-                taskList.replaceChild(taskDiv, taskList.childNodes[editIndex]);
-                editIndex = null;
-            } else {
-                taskList.appendChild(taskDiv);
-            }
+            taskList.appendChild(taskDiv);
 
             clearInputs();
         }
@@ -267,6 +242,17 @@
             const taskList = document.getElementById('taskList');
             editIndex = Array.prototype.indexOf.call(taskList.childNodes, taskDiv);
         }
+
+        function updateTime() {
+            const now = new Date();
+            const hours = String(now.getHours()).padStart(2, '0');
+            const minutes = String(now.getMinutes()).padStart(2, '0');
+            const seconds = String(now.getSeconds()).padStart(2, '0');
+            const timeString = `${hours}:${minutes}:${seconds}`;
+            document.getElementById('timeDisplay').innerText = timeString;
+        }
+
+        setInterval(updateTime, 1000);
     </script>
 </body>
 </html>
