--- a/index.html
+++ b/index.html
@@ -136,14 +136,13 @@
             <button onclick="addTask()">Add</button>
         </div>
         
+        <div class="time-display" id="timeDisplay"></div> <!-- Menampilkan jam di sini -->
+
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Search tasks..." onkeyup="searchTasks()">
         </div>
 
         <div id="taskList"></div>
-
-        <!-- Display time here -->
-        <div class="time-display" id="timeDisplay"></div>
     </div>
 
     <script>
