--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
     <div class="container">
         <h1>To-Do List</h1>
-        <div class="time-display" id="timeDisplay"></div> <!-- Menampilkan jam di sini -->
+        <div class="time-display" id="timeDisplay"></div>
 
         <div class="input-container">
             <input type="text" id="taskName" placeholder="Enter Task Name...">
@@ -134,7 +134,7 @@
             </select>
             <input type="date" id="dueDate">
             <input type="file" id="taskImage">
-            <button onclick="addTask()">Add</button>
+            <button id="actionButton" onclick="addTask()">Add</button>
         </div>
         
         <div class="search-container">
@@ -145,6 +145,8 @@
     </div>
 
     <script>
+        let editIndex = null;
+
         function addTask() {
             const taskName = document.getElementById('taskName').value;
             const description = document.getElementById('description').value;
@@ -199,7 +201,13 @@
 
             taskDiv.appendChild(buttonsDiv);
 
-            taskList.appendChild(taskDiv);
+            if (editIndex !== null) {
+                taskList.replaceChild(taskDiv, taskList.childNodes[editIndex]);
+                editIndex = null;
+                document.getElementById('actionButton').innerText = 'Add';
+            } else {
+                taskList.appendChild(taskDiv);
+            }
 
             clearInputs();
         }
@@ -239,6 +247,7 @@
 
             const taskList = document.getElementById('taskList');
             editIndex = Array.prototype.indexOf.call(taskList.childNodes, taskDiv);
+            document.getElementById('actionButton').innerText = 'Update';
         }
 
         function updateTime() {
