--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <div class="time-display" id="timeDisplay"></div>
 
         <div class="input-container">
-            <input type="text" id="taskName" placeholder="Enter Task Name...">
-            <input type="text" id="description" placeholder="Enter Description...">
+            <input type="text" id="taskName" placeholder="Masukan Nama Barang/Type...">
+            <input type="text" id="description" placeholder="Masukan QTY...">
             <select id="priority">
                 <option value="HRC">HRC</option>
                 <option value="Glodok">Glodok</option>
